<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.donovan.biddinggame.MainActivity">

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/your_value_is"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextYourBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_bid_here"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="94dp"
        android:layout_below="@+id/textViewValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewTheirValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Their Value: "
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="170dp"
        android:layout_above="@+id/editTextTheirBid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextTheirBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_their_bid_here"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp"
        android:layout_above="@+id/buttonCalculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp" />

    <TextView
        android:id="@+id/textViewYourTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_total"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="387dp"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/textViewTheirPayoff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewTheirTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/their_total"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="387dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewYourPayoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_payoff"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="333dp"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/textViewYourTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewTheirPayoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/their_payoff"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="333dp"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/textViewTheirTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewYourPayoff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:onClick="onClickCalculate"
        android:text="@string/calculate" />

</RelativeLayout>
